5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1578_579.log
== TEST (2019-03-13 17:51:49) 
-- CODE:
print("A UFAM tem", 2016 - , "anos de fundacao.)
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - , "anos de fundacao.)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:52:05) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundacao.)
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 1909 , "anos de fundacao.)
                                                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:52:21) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:52:43) 
-- CODE:
print("A UFAM tem", 2016 - 1909 ,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:52:46) 
-- CODE:
print("A UFAM tem", 2016 - 1909 ,"anos de fundacao.")
-- EXECUTION TIME:
0.13135
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:15:07) 
-- CODE:
print("A UFAM tem", 2016 - 1909 ,"anos de fundacao.")
-- EXECUTION TIME:
0.183708
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:22:13) 
-- CODE:
print("A UFAM tem", 2016 - 1909 ,"anos de fundacao.")
-- EXECUTION TIME:
0.141501
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:22:14) 
-- CODE:
print("A UFAM tem", 2016 - 1909 ,"anos de fundacao.")
-- EXECUTION TIME:
0.140471
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
